--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 <div class="header">
   <h3>Page principale</h3>
 </div>
+
 <div class="nav">
-  <app-nav></app-nav>
+  <app-nav [mesLinks]="mesLinksEnvoye"></app-nav>
 </div>
 
 <div class="content">
